<resources>
    <string name="app_name">AstroWeather2</string>
    <string name="moonrise">Moonrise :</string>
    <string name="blank">_</string>
    <string name="moonset">Moonset :</string>
    <string name="next_new_moon">Next new moon :</string>
    <string name="next_full_moon">Next full moon :</string>
    <string name="moon_phase">Moon phase [%]:</string>
    <string name="synodic_day">Synodic day :</string>
    <string name="sunrise">Sunrise :</string>
    <string name="sunset">Sunset :</string>
    <string name="sunriseTime">Sunrise time :</string>
    <string name="sunriseAzimuth">Sunrise azimuth :</string>
    <string name="sunsetTime">Sunset time :</string>
    <string name="sunsetAzimuth">Sunset azimuth :</string>
    <string name="morning_twilight">Civil morning twilight :</string>
    <string name="evening_twilight">Civil evening twilight :</string>
    <string name="options_activity_name">Options</string>
    <string name="moon_info">MOON INFO :</string>
    <string name="sun_info">SUN INFO :</string>
    <string name="latitude">Latitude :</string>
    <string name="refresh_frequency">Refresh frequency [s] :</string>
    <string name="longitude">Longitude :</string>
    <string name="options">Options</string>
    <string name="time">Time :</string>
    <string name="temperature">Temperature :</string>
    <string name="pressure">Pressure :</string>
    <string name="weather">Weather :</string>
    <string name="wind_force">Wind force :</string>
    <string name="wind_direction">Wind direction :</string>
    <string name="humidity">Humidity :</string>
    <string name="visibility">Visibility :</string>
    <string name="city">City :</string>
    <string name="add">Add and choose</string>
    <string name="question">Do you want to choose that location?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="choose_location">Choose location</string>
    <string name="change_city">Change city</string>
    <string name="location_list_activity_name">Locations List</string>
    <string name="add_location_activity_name">Add Location</string>
    <string name="units_prompt">Choose units</string>
    <string name="sun_and_moon_refresh_frequency_s">Sun and moon refresh frequency [s] :</string>
    <string name="refresh_weather">Refresh weather</string>
    <string-array name="units_array">
        <item>Default</item>
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>
